kubernetes/1-postgres/3-Postgres-exporter/10-exporter-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: postgres
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - postgres.ramanuj.dev
      secretName: postgres-exporter-tls
  rules:
    - host: postgres.ramanuj.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exporter-svc
                port:
                  number: 9187
